# qt5-qml-cmake-camera

./: CMakeLists.txt  application.pro  application.qmlproject.qtds  application.qrc  main.cpp
